.config/waybar/style.css
* {
    font-family: "JetBrains Mono", monospace;
    font-size: 11px;
    font-weight: 400;
    border: none;
    border-radius: 0;
    padding: 0;
    margin: 0;
    letter-spacing: 0.05em;
}

window#waybar {
    background: #0a0a0a;
    color: #71717a;
    border-bottom: 1px solid #18181b;
}

/* Workspaces */
#workspaces {
    padding: 0 6px;
}

#workspaces button {
    color: #3f3f46;
    background: transparent;
    padding: 0 8px;
    border-bottom: 1px solid transparent;
}

#workspaces button.focused {
    color: #e4e4e7;
    border-bottom: 1px solid #71717a;
}

#workspaces button.urgent {
    color: #a1a1aa;
}

#workspaces button:hover {
    color: #71717a;
    background: transparent;
    box-shadow: none;
}

/* Sway mode (power menu e outros) */
#mode {
    color: #e4e4e7;
    background: #0a0a0a;
    padding: 0 14px;
    border-bottom: 1px solid #18181b;
}

/* Window title */
#window {
    color: #3f3f46;
}

/* Todos os módulos da direita */
#pulseaudio,
#network,
#battery,
#clock,
#custom-power-profile {
    padding: 0 10px;
    color: #71717a;
}

#pulseaudio {
    border-left: 1px solid #18181b;
}

#custom-power-profile {
    border-left: 1px solid #18181b;
}

#battery {
    border-left: 1px solid #18181b;
}

#clock {
    color: #a1a1aa;
}

tooltip {
    background: #111111;
    border: 1px solid #27272a;
    color: #e4e4e7;
}

